<resources>
    <!-- Untranslatable -->
    <string name="app_name" translatable="false">Data analyzer</string>
    <string name="default_multiple_file" translatable="false">1</string>
    <string name="port" translatable="false">Port</string>

    <string name="about_app"> An application in which you can conduct research on: transfer time,
        transfer speed, connection quality (BT module) by sending files while connected to another
        device via the same app. Bluetooth and Wi-Fi Direct technologies are used.</string>

    <!-- Buttons -->
    <string name="wifi_module">Wi-Fi MODULE</string>
    <string name="bt_module">BLUETOOTH MODULE</string>
    <string name="start_detect">START DETECTED</string>
    <string name="find_devices">FIND DEVICES</string>
    <string name="show_available_devices">SHOW AVAILABLE DEVICES</string>
    <string name="send">SEND</string>
    <string name="choose_file">CHOOSE FILE</string>
    <string name="save_statistics">SAVE STATISTICS</string>
    <string name="show_graphs">SHOW GRAPH\'s</string>
    <string name="inf_log">INFORMATION LOG</string>
    <string name="error_log">ERROR LOG</string>
    <string name="cancel">Cancel</string>

    <!-- Connection -->
    <string name="not_connected">Not connected</string>
    <string name="port_number">Port Number</string>
    <string name="adding_port">Added network service providing port</string>
    <string name="adding_port_error">Failed added network service providing port</string>
    <string name="connect_as_host">Connected as a Host</string>
    <string name="connect_as_client">Connected as a Client</string>
    <string name="connect_initialization_success">Connection initialization successful</string>
    <string name="connect_failed">Connect failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_success">Disconnected successfully</string>
    <string name="disconnect_failed">Failed to disconnect</string>

    <!-- Socket -->
    <string name="socket_client_close">Socket client was closed</string>
    <string name="socket_client_close_error">Error closing socket client</string>
    <string name="socket_server_close">Socket server was closed</string>
    <string name="socket_server_close_error">Error closing socket server</string>
    <string name="server_socket_server_close">ServerSocket server was closed</string>
    <string name="server_socket_server_close_error">Error closing ServerSocket server</string>

    <!-- About Files -->
    <string name="file_details">File details</string>
    <string name="file_selected">Selected a file to upload</string>
    <string name="file_name">The name of the uploaded file</string>
    <string name="file_size">File size</string>
    <string name="file_sent">File sent</string>
    <string name="close_stream_to_file">Stream to file closed</string>
    <string name="close_stream_to_file_error">Failed to close stream to file</string>

    <!-- Stream -->
    <string name="open_stream_error">Error opening stream</string>
    <string name="close_stream_error">Stream closing error</string>
    <string name="close_output_stream_error">Error closing output stream</string>
    <string name="failed_create_stream_to_sending_file_inf">Failed to create stream to receive message whether file information was delivered</string>
    <string name="failed_create_stream_to_receive_message">Failed to create stream to receive message whether file was delivered</string>

    <!-- About uploading -->
    <string name="multiple_file">How many times to upload the file?</string>
    <string name="signal">Signal [%]:</string>
    <string name="sending_file_inf">Sending file information</string>
    <string name="sending_file_inf_error">Error sending file information</string>
    <string name="sent">Sent</string>
    <string name="download">Download</string>
    <string name="download_file">Downloaded file</string>
    <string name="end_upload_file_number">Finished uploading file number</string>
    <string name="end_download_file_number">Finished downloading file number</string>
    <string name="failed_save_on_server">Failed to save to the server</string>
    <string name="failed_send_file">Failed to send file</string>
    <string name="file_inf_retrieved">File information is being retrieved</string>
    <string name="file_name_set">The file name has been set</string>
    <string name="file_downloaded_and_saved">The file has been downloaded and saved</string>
    <string name="file_downloaded_and_saved_error">Error downloaded and saving file</string>
    <string name="sending_response_to_download_and_save">Sending response to download and save file</string>

    <!-- About Activity's -->
    <string name="title_log">Show LOG</string>
    <string name="back">Back</string>
    <string name="title_save_data">Enter the name of the measurement data file</string>
    <string name="select_device">Select a device</string>
    <string name="value_between_1_100">Enter a value between 1\-100</string>
    <string name="enter_value">Enter a numeric value</string>
    <string name="incorrect_format">Incorrect format loaded</string>
    <string name="file_size_in">File Size in</string>
    <string name="signal_quality">Signal quality</string>
    <string name="sending_time">Sending time [s]</string>
    <string name="upload_speed">Upload speed</string>
    <string name="name_received_file">The name of the received file</string>
    <string name="rssi_read_error">RSSI read hold error</string>
    <string name="error_read_signal_quality">There was an error reading the signal quality value</string>

    <!-- Measurement Data -->
    <string name="file_upload_number">File upload number</string>
    <string name="file_size_bytes">File size in bytes</string>
    <string name="size_set_buffer">The size of the set buffer:</string>
    <string name="upload_time">Upload time</string>
    <string name="upload_speed_is">Upload speed is</string>
    <string name="data_saved">The data has been saved</string>
    <string name="data_saved_error">Error writing measurement data to the file</string>
    <string name="name_of_file_to_save">Enter the name of the file to save</string>
    <string name="average">Average</string>

    <!-- Graph -->
    <string name="title_graph">Graph</string>
    <string name="graph_text">Choose which chart you want to display</string>

    <!-- Author -->
    <string name="about_author">About Author</string>
        <string name="text_about_author">My name is Bartosz Gieras and I am the creator of this application. I am an engineer of Applied Mathematics and a Master of Computer Science by education.
    The given application was used for research included in my master\'s thesis entitled \"Analysis of data transmission in Bluetooth and Wi-Fi technologies in communication between mobile devices\".
    If you have any questions or comments about this application, below is my profile on GitHub:</string>

    <!-- Languages -->
    <string name="change_lang">Change Language</string>
    <string name="choose_language">Choose language</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>

    <!-- Buffer -->
    <string name="buffer_size">Buffer Size:</string>
    <string-array name="buffer_size_array">
        <item>4KB</item>
        <item>8KB</item>
        <item>16KB</item>
        <item>32KB</item>
        <item>64KB</item>
        <item>128KB</item>
        <item>256KB</item>
        <item>10% of file</item>
    </string-array>

    <!-- Toast -->
        <string name="turn_on_location">Please Turn On Location</string>

        <!-- Bluetooth -->
        <string name="doesnt_support_bt">Device doesn\'t support Bluetooth</string>
        <string name="bt_on">Bluetooth started</string>
        <string name="bt_off">Bluetooth not enabled</string>
        <string name="bt_server_on">A server Bt has started</string>
        <string name="bt_server_off">The server Bt has ended</string>
        <string name="connect_bt_success">The connection by Bt attempt succeeded</string>
        <string name="socket_bt_failed">Socket\'s Bt listen() method failed</string>
        <string name="error_close_server_socket_bt">Error closing output stream on Bt connection</string>
        <string name="failed_socket_bt">Socket\'s Bt accept() method failed</string>
        <string name="failed_create_socket_bt">Socket\'s create() method failed</string>
        <string name="error_close_socket_bt">Error closing socket\'s Bt</string>
        <string name="bt_client_on">A client Bt has started</string>
        <string name="unable_connect">Unable to connect</string>
        <string name="client_socket_close">Client socket closed</string>
        <string name="client_socket_close_error">Could not close the client socket</string>
        <string name="device_discoverable">The device is discoverable</string>
        <string name="broadcast_bt_off">Broadcast on BT was closed"</string>
        <string name="bt_adapter_close">bluetoothAdapter was closed</string>
        <string name="socket_bt_close">The Bt client socket has been closed</string>
        <string name="socket_bt_close_error">Error closing Bt client socket</string>
        <string name="socket_server_bt_close">The Bt socket server has been shut down</string>
        <string name="socket_server_bt_close_error">Error closing socket server Bt</string>

        <!-- Wi-Fi -->
        <string name="wifi_on">WiFi started</string>
        <string name="wifi_off">WiFi not enabled</string>
        <string name="wifi_direct_doesnt_support">Device doesn\'t support WiFi Direct</string>
        <string name="no_devices_found">No Devices Found</string>
        <string name="discovery_started">Discovery started</string>
        <string name="discovery_failed">Discovery failed</string>
        <string name="wifi_direct_off">Wi-Fi Direct has been disabled</string>
        <string name="broadcast_wifi_off">Broadcast on Wi-Fi was closed"</string>
        <string name="server_wifi_on">A server Wifi has started</string>
        <string name="connect_by_wifi_direct_error">Connection by Wifi Direct error</string>
        <string name="failed_connect_via_wifi_direct">Failed to connect via Wi-Fi Direct</string>
        <string name="no_sevices_found">No services found</string>

</resources>
