<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wifi.WiFi"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connected"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_disconnectAndBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"
                app:icon="@drawable/ic_wifi_disconnect_back"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/button_devices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_available_devices"
                app:icon="@drawable/ic_search"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/button_detect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/start_detect"
                app:icon="@drawable/ic_wifi_detected"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_chooseFile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:visibility="invisible"
                android:text="@string/choose_file"
                app:icon="@drawable/ic_choose_file" />

            <Button
                android:id="@+id/button_sendData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/send"
                android:visibility="invisible"
                app:icon="@drawable/ic_send_file" />

            <Button
                android:id="@+id/button_saveMeasurementData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/save_statistics"
                app:icon="@drawable/ic_save_data"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_graph"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/show_graphs"
                app:icon="@drawable/ic_graph"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parameterLayoutForFileUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/multiple_file" />

            <ImageButton
                android:id="@+id/button_downMultipleFile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/arrow_down_float"
                android:rotation="90"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/multiple_file"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_multiple_file"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <ImageButton
                android:id="@+id/button_upMultipleFile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/arrow_up_float"
                android:rotation="90"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/buffer_size" />

            <Spinner
                android:id="@+id/buffer_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="100" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:scrollbars="vertical"/>

</LinearLayout>