<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="339dp"
        android:layout_height="279dp"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button_bt"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/bt_module"
        app:icon="@drawable/ic_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button_wifi"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/wifi_module"
        app:icon="@drawable/ic_wifi"
        app:layout_constraintBottom_toTopOf="@+id/button_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.341" />

</androidx.constraintlayout.widget.ConstraintLayout>